# BineCrabricCPP

./: .clang-format  .gitignore  CMakeLists.txt  CONSOLIDATION_COMPLETE.md  CONSOLIDATION_FINAL_REPORT.md  CONSOLIDATION_PROGRESS.md  CONSOLIDATION_SUMMARY.md  CONSOLIDATION_TASKS.md  LUA_MODLOADER_CLARIFICATIONS.md  LUA_MOD_CONSOLIDATION_PLAN.md  LUA_MOD_CONSOLIDATION_STATUS.md  PHASE2_CONFIG_PLAN.md  README.md  RULES FOR AGENTS.md  START_HERE.bat  build-client.ps1  build-gui.ps1  build-omega.ps1  build-server.ps1  build.bat  clean-omega.ps1  format-omega.ps1  package-mods.ps1  package-runtime-mods.ps1  refactor-gl-api.ps1  refactor-gl-typed.ps1
docs/: LUA_MOD_API_COMPACT.md  LUA_MOD_API_COMPACT_EXAMPLES.md  LUA_MOD_API_TOKEN_DENSE.md  LUA_MOD_PROGRAMMING_MANUAL.md  SERVER_PORT_COORDINATION.md  SERVER_PORT_FIX_COORDINATION.md  gui-simplify-plan.md  gui-simplify-progress.md  microsoft-auth-pipeline.md  mod-sync-generalization-handoff.md  mp-lan-chunk-handoff.md  refactor-plan.md  refactor-progress.md
docs/LUA_MOD_MANUAL/: 01-core-and-lifecycle.md  01-introduction-and-packages.md  02-event-system.md  02-events-reference.md  03-api-functions.md  03-registries-and-content.md  04-registration.md  04-world-and-entities.md  05-rendering-and-models.md  05-world-and-generation.md  06-gui-and-audio.md  06-rendering.md  07-gui-and-screens.md  08-inventory-audio-utilities.md  09-mod-gallery.md  10-json-model-format.md  README.md
docs/LUA_MOD_MANUAL/mod_rundown/: 01-introduction-and-packages.md  02-events-reference.md  03-api-functions.md  04-registration.md  05-world-and-generation.md  06-rendering.md  07-gui-and-screens.md  08-inventory-audio-utilities.md  09-mod-gallery.md  10-json-model-format.md  README.md
mcp/: sources.txt
mcp/world/: level.dat_old
mcp/world/region/: r.-1.-1.mcr  r.-1.0.mcr  r.0.-1.mcr
mods/: CMakeLists.txt  README.md  README.txt
mods/camera/: mod.json
mods/camera/config/: init.lua
mods/camera/models/: tripod_top.bbmodel  tv.json
mods/camera/scripts/: main.lua
mods/colorful_skies/: mod.json
mods/colorful_skies/config/: init.lua
mods/colorful_skies/scripts/: main.lua
mods/coral/: mod.json
mods/coral/config/: init.lua
mods/coral/models/: coral.json
mods/coral/scripts/: main.lua
mods/critical_hit/: mod.json
mods/critical_hit/config/: init.lua
mods/critical_hit/scripts/: main.lua
mods/fog_settings/: mod.json
mods/fog_settings/config/: init.lua
mods/fog_settings/scripts/: main.lua
mods/iron_bars/: mod.json
mods/iron_bars/config/: init.lua
mods/iron_bars/models/: iron_bars.json
mods/iron_bars/scripts/: main.lua
mods/item_audio_demo/: mod.json
mods/item_audio_demo/scripts/: main.lua
mods/item_drop_physics/: mod.json
mods/item_drop_physics/assets/: item_physics.json
mods/item_drop_physics/config/: init.lua
mods/item_drop_physics/physics/: water.lua  world.lua
mods/item_drop_physics/rendering/: item_renderer.lua
mods/item_drop_physics/scripts/: box3d.lua  main.lua
mods/judaism/: mod.json
mods/judaism/scripts/: commands.lua  community.lua  compat.lua  content_registry.lua  holidays.lua  main.lua  progression.lua  rituals.lua  synagogue.lua  util.lua  world_features.lua
mods/judaism/tests/: README.md
mods/layered_clouds/: mod.json
mods/layered_clouds/config/: init.lua
mods/layered_clouds/scripts/: config_helper.lua  main.lua  settings_helper.lua
mods/lib/: config.lua  math_util.lua  screen_ui.lua
mods/lib/audio/: init.lua
mods/lib/core/: init.lua
mods/lib/physics/: box3d.lua
mods/lib/rendering/: init.lua
mods/meteors/: mod.json
mods/northern_stars/: mod.json
mods/offline_mode/: mod.json
mods/ravine_backport/: mod.json
mods/realtime_sky/: LOD_STATS.json  README.txt  mod.json
mods/repair_table/: mod.json
mods/seedfinder/: mod.json
mods/shadow_viewport/: mod.json
mods/simple_lantern/: mod.json
mods/sprint/: mod.json
mods/stone_bricks/: mod.json
mods/too_many_items/: mod.json
mods/void_fog/: mod.json
mods/world_profiles/: README.md  mod.json
scripts/: convert_render_bounds.py  defer_recipe_calls.py  fix_register_item.py  generate-block-registrations.ps1  leaf_items.py  migrate-block-registrations.ps1  migrate_recipes_colocate.py  refactor_items_recipes.py  strip_krawid.py
shaderpacks/acid/: pack.json
shaderpacks/psx/: pack.json
shaderpacks/vanilla/: pack.json
shaderpacks/vibrant/: pack.json
src/: main.cpp  server-main.cpp
src/installer/: installer.cpp
src/msauth/: AccountStorage.cpp  AccountStorage.hpp  FilePicker.cpp  FilePicker.hpp  LoginScreen.cpp  LoginScreen.hpp  MicrosoftAuth.cpp  MicrosoftAuth.hpp  SecretProtection.hpp  SessionRestore.cpp  SessionRestore.hpp
src/seedfinder/: main.cpp
tests/: TestAssert.hpp  biome_temperature_parity_test.cpp  block_registry_properties_test.cpp  chunk_map_test.cpp  client_timer_test.cpp  connection_listener_test.cpp  generator_rng_parity_test.cpp  hook_bus_test.cpp  integrated_server_host_test.cpp  java_random_golden_test.cpp  lan_host_coordinator_test.cpp  lod_policy_test.cpp  lua_runtime_prelude_test.cpp  minecraft_server_tick_test.cpp  mod_lifecycle_registry_test.cpp  mod_settings_registry_test.cpp  model_registry_parent_test.cpp  mp_chunk_data_test.cpp  mp_chunk_delivery_test.cpp  mp_parity_updates_test.cpp  msauth_account_storage_test.cpp  multiplayer_client_player_entity_test.cpp  nbt_roundtrip_test.cpp  pack_manifest_test.cpp  packet_roundtrip_test.cpp  player_manager_test.cpp  registry_bootstrap_test.cpp  render_profiler_test.cpp  resolved_render_options_test.cpp  seed_probe_golden_test.cpp  server_chunk_cache_test.cpp  server_command_handler_test.cpp  server_login_handler_test.cpp  server_properties_test.cpp  server_world_events_test.cpp  stereo_transform_color_golden_test.cpp  terrain_mesher_test.cpp  unified_light_registry_test.cpp  uniform_sync_test.cpp  view_distance_test.cpp  (+2 more)
tests/support/: mock_connection.hpp  server_event_fixture.hpp  server_test_macros.hpp  server_world_fixture.hpp
toolchain/: manifest.json
tools/: centralize_registrations.py  restore_self_registration.py
(+2170 files in other folders)
